[package]
name = "server"
version = "0.1.0"
authors = ["novacrazy <novacrazy@gmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
nightly = ["crc32fast/nightly", "parking_lot/nightly", "rand/nightly", "hashbrown/nightly"]
armv8 = ["nightly", "aes/armv8", "aes-gcm-siv/armv8"]

[dependencies]
db = { path = "../db" }
util = { path = "../util" }
schema = { path = "../schema" }
totp = { path = "../totp" }
processing = { path = "../processing" }
iplist = { path = "../iplist" }
embed_parser = { path = "../embed_parser" }

blurhash = { path = "../blurhash" }

sdk = { git = "https://github.com/Lantern-chat/client-sdk-rs", features = ["pg", "api"], package = "client-sdk" }
smol_str = { version = "0.1", features = ["serde", "pg"] }

ftl = { git = "https://github.com/Lantern-chat/ftl", features = ["json", "cbor"] }
mime_db = { git = "https://github.com/Lantern-chat/mime_db" }
thorn = { git = "https://github.com/Lantern-chat/thorn" }
async-chashmap = { git = "https://github.com/novacrazy/async-chashmap" }

timestamp = { package = "iso8601-timestamp", version = "0.1", features = ["pg"] }

serde = { version = "1", features = ["derive", "rc"] }
serde_urlencoded = "0.7"
tokio = { version = "1.4", features = ["full", "parking_lot"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-rustls = "0.23.0"
# tls-listener = { version = "0.2.1", features = ["hyper-h1", "hyper-h2", "tokio-net"] }
async-stream = "0.3"
async-trait = "0.1.50"
async-compression = { version = "0.3.8", features = ["brotli", "deflate", "gzip", "tokio"] }
hashbrown = { version = "0.12", features = ["inline-more"] }
futures = "0.3"
hyper = { version = "0.14.4", features = ["http1", "http2", "server", "stream", "runtime"] }
mime = "0.3.16"
http = "0.2.3"
tracing = { version = "0.1", default-features = false, features = ["log", "std"] }
headers = "0.3"
base64 = "0.13.0"
hex = "0.4.2"
bytes = "1.0.1"
bytecount = "0.6.2"
lazy_static = "1.4.0"
rust-argon2 = "1"
aes = { version = "0.7", features = ["ctr"] }
aes-gcm-siv = "0.10.3"
# sha3 = "0.9.1"
miniz_oxide = "0.5"
thiserror = "1.0.24"
serde_repr = "0.1.6"
paste = "1.0.5"
serde_json = "1.0.64"
ciborium = "0.2"
rand = "0.8.3"
time = { version = "0.3", features = ["macros"] }
regex = "1.4.6"
tokio-tungstenite = { version = "0.17", default-features = false, features = ["connect"] }
ahash = "0.7.2"
either = "1.6.0"
failsafe = "1.0.0"
parking_lot = "0.12"
num_cpus = "1.13.0"
aho-corasick = "0.7"
arc-swap = "1.2.0"
bitflags = "1.2"
pin-project-lite = "0.2.8"
crc32fast = "1.2.1"
urlencoding = "2.1.0"
base32 = "0.4.0"
socket2 = "0.4.2"
anyhow = "1.0.44"
arrayvec = "0.7.1"
cache-padded = "1.1.1"
itoa = "1.0.1"
regex-automata = "0.1.10"
quick-xml = { version = "0.22.0", features = ["serialize"] }
reqwest = { version = "0.11", default-features = false, features = ["gzip", "deflate", "brotli", "rustls-tls"] }
smallvec = "1.7.0"
memchr = "2.4.1"
toml = { version = "0.5", features = ["preserve_order"] }
# humantime = "2.1.0"

[build-dependencies]
built = { version = "0.5", features = ["chrono"] }

