[package]
name = "timestamp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
time = { version = "0.3", features = ["macros"] }
postgres-types = { version = "0.2.2", features = ["with-time-0_3"] }
bytes = "1.1.0"
generic-array = "0.14.4"

[dev-dependencies]
time = { version = "0.3", features = ["macros", "parsing", "formatting"] }
criterion = "0.3"
chrono = "0.4"

[[bench]]
name = "timestamp"
harness = false