[package]
name = "util"
version = "0.1.0"
authors = ["novacrazy <novacrazy@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rand_chacha = "0.3.0"
tokio = { version = "1.4", features = ["sync"] }
hashbrown = { version = "0.11", features = ["inline-more"] }
num_cpus = "1.13.0"
lazy_static = "1.4.0"
futures = "0.3.14"
thiserror = "1.0.24"
pin-project = "1.0.7"
