[package]
name = "util"
version = "0.1.0"
authors = ["novacrazy <novacrazy@gmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
timestamp = { package = "iso8601-timestamp", version = "0.2" }

smol_str = "0.2"
rand = "0.8"
rand_chacha = "0.3.0"
tokio = { version = "1.4", features = ["sync"] }
hashbrown = { version = "0.14", features = ["inline-more"] }
num_cpus = "1.13.0"
lazy_static = "1.4.0"
futures = "0.3.14"
thiserror = "1.0.24"
hex = "0.4"
base64 = "0.22.0"
serde = "1"
time = { version = "0.3", features = ["macros"] }
miniz_oxide = { version = "0.7", features = ["std"] }
thin-vec = "0.2"
# itoa = "0.4.8"
# regex = "1.5.4"
# regex-automata = "0.1.10"
# strength_reduce = "0.2.3"

# static_init = "1.0.1"
# specialized-div-rem = { version = "1.0.1", default_features = false, features = ["implement", "std"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "utils"
harness = false
