[package]
name = "util"
version = "0.1.0"
authors = ["novacrazy <novacrazy@gmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
timestamp.workspace = true
smol_str.workspace = true
thin-vec.workspace = true
rand = "0.8"
rand_chacha = "0.3.0"
tokio = { version = "1.4", features = ["sync"] }
futures = "0.3.14"
thiserror = "1.0.24"
hex = "0.4"
base64 = "0.22.0"
serde = "1"
time = { version = "0.3", features = ["macros"] }
miniz_oxide = { version = "0.8", features = ["std"] }
# itoa = "0.4.8"
# regex = "1.5.4"
# regex-automata = "0.1.10"
# strength_reduce = "0.2.3"

# static_init = "1.0.1"
# specialized-div-rem = { version = "1.0.1", default_features = false, features = ["implement", "std"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "utils"
harness = false
