[package]
name = "camo-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
# keep in sync with WORKERS_RS_VERSION in wrangler.toml
worker = "0.0.12"

cfg-if = "1"
serde_json = "1.0.67"
base64 = "0.21"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }
futures-util = "0.3.25"
memchr = "2.5.0"
hmac = "0.12.1"
sha1 = "0.10.5"
hex = "0.4.3"

[profile.release]
opt-level = "s"
lto = 'fat'
codegen-units = 1
