[package]
name = "camo-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["standalone"]
cf = ["dep:worker", "console_error_panic_hook"]
standalone = ["reqwest", "tokio", "axum", "dotenv"]

[dependencies]
# keep in sync with WORKERS_RS_VERSION in wrangler.toml
worker = { version = "0.0.12", optional = true }
console_error_panic_hook = { version = "0.1.1", optional = true }

reqwest = { version = "0.11", optional = true, features = ["json", "stream"] }
tokio = { version = "1", optional = true, features = ["full"] }
axum = { version = "0.6", optional = true, features = ["http2"] }
dotenv = { version = "0.15", optional = true }

cfg-if = "1"
serde_json = "1.0.67"
base64 = "0.21"
futures-util = "0.3.25"
memchr = "2.5.0"
hmac = "0.12.1"
sha1 = "0.10.5"
hex = "0.4.3"

[[bin]]
name = "camo-worker"
path = "src/bin/standalone.rs"
required-features = ["standalone"]